Fixed layout issues

--- a/src/assets/scss/layouts/_sidebar.scss
+++ b/src/assets/scss/layouts/_sidebar.scss
@@ -65,7 +65,7 @@
 
   &__list {
     li {
-      font-size: 15px;
+      font-size: 18px;
 
       padding: 10px 0;
       &:first-child {
